<resources>
    <string name="app_name">日历</string>
    <!--起始页-->
    <string name="goto_date">日期跳转</string>
    <string name="back_to_today">返回今天</string>
    <string name="yyyy_MM">%d年%d月</string>
    <string name="yyyy_MM_dd">%d年%d月%d日</string>
    <string name="dd">%d日</string>
    <string name="date">日</string>
    <string name="default_time">00:00</string>
    <string name="duration_bigger_than_zero">距离今天%d天</string>
    <string name="duration_smaller_than_zero">已经过去%d天</string>
    <string name="temperature">%d℃</string>
    <string name="event_empty_click_to_add">没有日程，点击添加日程</string>

    <!--事件页-->
    <string name="event_list">事件列表</string>

    <!--日期计算器-->
    <string name="date_calculate">日期推算</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">截止时间</string>
    <string name="interval">间隔时间</string>
    <string name="interval_hint">请输入间隔时间</string>
    <string name="calculate_result">计算结果</string>
    <string name="lunar_out_of_bound">农历结果超出范围</string>
    <string name="sky">天</string>
    <string name="zero">0</string>

    <!--创建活动-->
    <string name="save">保存</string>
    <string name="create_event">创建活动</string>
    <string name="type_in_event_name">请输入活动名称</string>
    <string name="all_day">全天</string>
    <string name="select_event_type">选择活动类别</string>
    <string name="type_in_description">备注</string>
    <string name="type_in_location">位置</string>
    <string name="start_and_end">起始时间</string>
    <string name="location">位置</string>
    <string name="add_alert">添加提醒</string>
    <string name="user">用户</string>
    <string name="alert">提醒</string>
    <string name="repeat">重复</string>
    <string name="repeat_type">重复类型</string>
    <string name="alert_after_event">活动结束是否提醒</string>

    <string name="not_support">暂时不支持自定义用户！敬请期待！</string>

    <!--新建任务-->
    <string name="event_name_can_not_be_null">事件名称不可为空!</string>
    <string name="do_not_select_time_before_start">请不要选择开始时间之前的时间!</string>
    <string name="deadline">截止时间</string>
    <string name="task_name">任务名称</string>

    <!--通用-->
    <string name="saving">正在保存</string>
    <string name="default_user">默认用户</string>
    <string name="detail">说明</string>
    <string name="NULL">无</string>
    <string name="calendar">日历</string>
    <string name="task">任务</string>
    <string name="event">活动</string>
    <string name="settings">设置</string>
    <string name="leap">闰</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="time_separator">:</string>
    <string name="solar">公历</string>
    <string name="lunar">农历</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="create_local_user">创建本地用户</string>
    <string name="about">关于</string>
    <string name="save_fail">保存失败</string>
    <string name="save_success">保存成功</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="running">正在后台运行,您可以点击这里去关闭这个渠道来取消这个通知！</string>
    <string name="event_notification">事件提醒</string>
    <string name="keep_alive_notification">保活通知</string>
    <string name="keep_alive_notification_channel_description">这个渠道只是为了保活，你可以关闭这个渠道，但是这并不会影响到推送服务！</string>
    <string name="event_notification_channel_description">该渠道用于推送用户保存的提醒，避免用户错过提醒！\nIMPORTANT！！！\nIMPORTANT！！！！！！\nIMPORTANT</string>

    <!--默认提供的事件类型-->
    <string name="type_default">默认事件</string>
    <string name="type_birthday">生日</string>
    <string name="type_meeting">会议</string>
    <string name="type_appointment">约会</string>
    <string name="type_memorial">纪念日</string>

    <!--设置页面-->
    <string name="option_first_weekday">一周的起始日</string>
    <string name="option_hide_status">沉浸状态栏</string>
    <string name="option_theme">主题设置</string>
    <string name="permission_to_backup_and_restore">赋予文件读写权限使用备份以及恢复功能！</string>
    <string name="option_backup">数据备份</string>
    <string name="summary_backup">数据文件将保存在系统目录的cn.rygel.gd/backup文件夹下，请妥善保管！</string>
    <string name="option_restore">数据恢复</string>
    <string name="summary_restore">请将您的数据文件放在系统目录的cn.rygel.gd/restore文件夹下，并保证该文件夹下只有一个数据文件！在恢复前应用将对您现有的数据进行备份，以保证数据安全！在恢复成功后APP将自动重启！</string>
    <string name="no_restore_data_found">未找到数据文件</string>
    <string name="copy_fail">复制失败</string>
    <string name="more_than_one_file_in_restore_folder">恢复文件夹内包含多个数据文件，请保证只有一个数据文件在文件内！</string>
    <string name="restore_success">恢复成功,自动重启中！</string>
    <string name="option_group">用户群</string>
    <string name="option_account">账户</string>
    <string name="option_about">关于</string>
    <string name="option_keep_alive">添加到应用白名单</string>
    <string name="add_to_white_list">请将应用加入白名单以保证日历正常运行！</string>
    <string name="summary_keep_alive">如果设备无法正常接收到通知提醒或者小部件存在无法更新的情况，请点击此处并将APP添加至应用白名单。</string>
    <string name="summary_hide_status">Android 5.0 以上沉浸式状态栏。</string>
    <string name="default_first_weekday">星期日</string>
    <string name="base_setting">基础设置</string>
    <string name="other_setting">其他设置</string>
    <string name="choose_color">选择颜色</string>

    <!--小部件设置-->
    <string name="widget_setting">小部件设置</string>
    <string name="widget_id_not_found">小部件设置失败</string>
    <string name="color_background">纯色背景</string>
    <string name="hide_title">隐藏小部件标题栏</string>
    <string name="text_color">字体颜色</string>
    <string name="bg_color">背景颜色</string>
    <string name="background_blur">背景高斯模糊</string>
    <string name="background_alpha">背景透明度</string>
    <string name="background_corner_radius">背景圆角大小</string>
    <string name="click_img_to_reselect">点击图片以重新选择</string>

    <!--时间轴-->
    <string name="event_location">地点：</string>
    <string name="event_time">时间：</string>

    <!--关于界面-->
    <string name="version">版本号</string>
    <string name="star">评分</string>
    <string name="star_description">喜欢本应用的话不妨给个好评吧！</string>
    <string name="email">邮箱</string>
    <string name="m_email">rygel.tang@gmail.com</string>
    <string name="qq">QQ</string>
    <string name="m_qq">1066340496</string>
    <string name="qq_group">用户反馈交流群</string>
    <string name="m_qq_group">228434421</string>
    <string name="author">开发者</string>

    <string name="not_found_qq">跳转失败：您没有安装QQ！</string>
    <string name="not_found_store">跳转失败：您没有安装酷安！</string>
    <string name="copy_success">复制成功</string>

    <!--方向-->
    <string-array name="directions">
        <item>前</item>
        <item>后</item>
    </string-array>

    <!--星期选择器-->
    <string-array name="weekdays">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string-array name="color_values">
        <item>薄青</item>
        <item>奶奶灰</item>
        <item>豹粉</item>
        <item>柠檬黄</item>
        <item>鸟之子</item>
        <item>小草绿</item>
        <item>薄紫</item>
        <item>深支子</item>
        <item>雀茶</item>
    </string-array>

    <string-array name="theme_colors">
        <item>#7ABD9A</item>
        <item>#90A4A1</item>
        <item>#D39EA6</item>
        <item>#F7D94C</item>
        <item>#DAC9A6</item>
        <item>#91AD70</item>
        <item>#986DB2</item>
        <item>#FB9966</item>
        <item>#8F5A3C</item>
    </string-array>

    <string-array name="theme_light_colors">
        <item>#BCDECD</item>
        <item>#B0BEC5</item>
        <item>#E0BEB9</item>
        <item>#FFF59D</item>
        <item>#DAC9DD</item>
        <item>#B5CAA0</item>
        <item>#B28FCE</item>
        <item>#F0A986</item>
        <item>#E3916E</item>
    </string-array>

    <string-array name="theme_dark_colors">
        <item>#7ABD9A</item>
        <item>#90A4A1</item>
        <item>#D39EA6</item>
        <item>#F7D94C</item>
        <item>#DAC9A6</item>
        <item>#91AD70</item>
        <item>#986DB2</item>
        <item>#FB9966</item>
        <item>#8F5A3C</item>
    </string-array>

    <string-array name="accent_colors">
        <item>#7ABD9A</item>
        <item>#90A4A1</item>
        <item>#D39EA6</item>
        <item>#F7D94C</item>
        <item>#DAC9A6</item>
        <item>#91AD70</item>
        <item>#986DB2</item>
        <item>#FB9966</item>
        <item>#8F5A3C</item>
    </string-array>

    <!--日期选择器-->
    <string name="use_lunar_mode">使用农历日期</string>

    <!--重复类型-->
    <string-array name="repeat_types">
        <item>不重复</item>
        <item>按天</item>
        <item>按周</item>
        <item>按月</item>
        <item>按年</item>
    </string-array>

    <!--时间选择-->
    <string-array name="hours">
        <item>00</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

</resources>
