<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_check_white_24dp"
        android:title="@string/save"
        app:showAsAction="always"/>

    <group android:checkableBehavior="single">
        <item android:id="@+id/action_default_event"
            android:title="@string/type_default"/>
        <item android:id="@+id/action_birthday_event"
            android:title="@string/type_birthday"/>
        <item android:id="@+id/action_appointment_event"
            android:title="@string/type_appointment"/>
        <item android:id="@+id/action_meeting_event"
            android:title="@string/type_meeting"/>
        <item android:id="@+id/action_memorial_event"
            android:title="@string/type_memorial"/>
    </group>

</menu>