<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/md_divider_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        style="@style/BaseToolBar"
        android:id="@+id/tb_setting"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_m"
        app:navigationIcon="@drawable/md_nav_back"
        app:title="@string/settings"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/base_setting"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_hide_status"
                android:padding="@dimen/padding_l"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="@dimen/padding_xs"
                        android:textSize="@dimen/text_s"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/option_hide_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="@dimen/text_s"
                        android:textColor="@color/colorSecondaryText"
                        android:text="@string/summary_hide_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switch_hide_status"
                    app:kswThumbMargin="-3dp"
                    app:kswTintColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_theme"
                android:padding="@dimen/padding_l"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="@dimen/padding_xs"
                    android:textSize="@dimen/text_s"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/option_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_select_first_weekday"
                android:padding="@dimen/padding_l"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="@dimen/padding_xs"
                    android:textSize="@dimen/text_s"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/option_first_weekday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_summary_weekday"
                    android:textSize="@dimen/text_s"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/default_first_weekday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <RelativeLayout
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_keep_alive"
                android:padding="@dimen/padding_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="@dimen/padding_xs"
                    android:id="@+id/tv_option_keep_alive"
                    android:textSize="@dimen/text_s"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/option_keep_alive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_below="@+id/tv_option_keep_alive"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/text_s"
                    android:text="@string/summary_keep_alive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switch_keep_alive"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    app:kswThumbMargin="-3dp"
                    app:kswTintColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:layout_marginLeft="@dimen/margin_m"
                android:layout_marginTop="@dimen/margin_m"
                android:text="@string/other_setting"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_about"
                android:orientation="vertical"
                android:padding="@dimen/padding_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="@dimen/padding_xs"
                    android:textColor="@color/colorPrimaryText"
                    android:gravity="start"
                    android:textSize="@dimen/text_s"
                    android:text="@string/option_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>