<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/margin_m"
        android:padding="@dimen/padding_m"
        app:cardCornerRadius="@dimen/round_corner_radius_m"
        app:cardElevation="@dimen/elevation_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/padding_s"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:text="@string/start_time"
                android:padding="@dimen/padding_m"
                android:textSize="@dimen/text_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btn_start_time"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/yyyy_MM_dd"
                android:textSize="@dimen/text_m"
                android:padding="@dimen/padding_m"
                android:gravity="center_vertical|start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/margin_m"
        android:padding="@dimen/padding_m"
        app:cardCornerRadius="@dimen/round_corner_radius_m"
        app:cardElevation="@dimen/elevation_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/padding_s"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:text="@string/interval"
                android:padding="@dimen/padding_m"
                android:textSize="@dimen/text_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:padding="@dimen/padding_m"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_interval"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/padding_m"
                    android:hint="@string/interval_hint"
                    android:inputType="number"
                    android:text="@string/zero"
                    android:textColor="@color/colorSecondaryText"
                    android:backgroundTint="@color/divider_color"
                    android:background="@drawable/bg_round_corner"
                    android:textSize="@dimen/text_m"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:text="@string/sky"
                    android:padding="@dimen/padding_m"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_direction"
                    app:ms_text_color="@color/colorSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_margin="@dimen/margin_m"
        android:padding="@dimen/padding_m"
        app:cardCornerRadius="@dimen/round_corner_radius_m"
        app:cardElevation="@dimen/elevation_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="@dimen/padding_s"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorPrimaryText"
                android:text="@string/calculate_result"
                android:padding="@dimen/padding_m"
                android:textSize="@dimen/text_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/tv_solar"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/yyyy_MM_dd"
                android:textSize="@dimen/text_m"
                android:padding="@dimen/padding_m"
                android:gravity="center_vertical|start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/tv_lunar"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/yyyy_MM_dd"
                android:textSize="@dimen/text_m"
                android:padding="@dimen/padding_m"
                android:gravity="center_vertical|start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>